# narada-python-sdk

./: .gitignore  .gitmodules  CLAUDE.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: architecture-docs-freshness.yml  check.yml  codex-review.yaml  type-sync.yml
examples/: README.md  agentic_mouse_action.py  agentic_selector.py  agentic_selector_get_property.py  attachment.py  basics.py  choose_agent.py  cloud_browser.py  complex_workflow.py  conversation.py  critic.py  custom_agent.py  demo_attachment_file.txt  download_file.py  excel_sheets.py  existing_browser.py  get_url.py  google_sheets.py  human_in_the_loop.py  input_variables_file.py  launch_browser.py  managed_browser.py  mcp_server.py  multiple-windows.py  multiple_window_interdependencies.py  multiple_windows.py  multiple_windows_interdependencies.py  press_key.py  proxy.py  remote_browser.py  single-window.py  single_window.py  structured_output.py  timeout-handling.py  timeout_handling.py
examples/01_getting_started/: 01_run_your_first_task.py  02_choose_an_agent.py  03_multi_turn_conversation.py  04_get_structured_output.py
examples/02_building_workflows/: 02_run_tasks_in_parallel.py  05_verify_results_with_a_critic.py  06_ask_the_user_for_input.py
examples/03_files_and_data/: 03_read_and_write_google_sheets.py  04_read_and_write_excel.py  06_render_html_output.py
examples/05_browser_setups/: 02_run_in_a_cloud_browser.py  (+2 more)
narada/: pyproject.toml
scripts/: validate_operator_action_trace_timing.py
src/narada/: __init__.py  (+5 more)
tests/: test_launch_browser.py
(+8 files in other folders)
